...
//extension AlarmButton {
//    static var openAppButton: Self {
//        AlarmButton(text: "Open", textColor: .black, systemImageName: "swift")
//    }
//    
//    static var pauseButton: Self {
//        AlarmButton(text: "Pause", textColor: .black, systemImageName: "pause.fill")
//    }
//    
//    static var resumeButton: Self {
//        AlarmButton(text: "Start", textColor: .black, systemImageName: "play.fill")
//    }
//    
...
